Get names of bus-stop in Beijing.

--- a/web/conf/nginx-zhufangzhi.conf
+++ b/web/conf/nginx-zhufangzhi.conf
@@ -8,7 +8,7 @@ server {
 	client_max_body_size 50M;
 
 	location ^~ /static/ {
-		root /root/ZhuFangZhi/website/;
+		root /root/ZhuFangZhi/web/;
 		if ($query_string) {
 			expires max;
 		}
