--- a/web/conf/supervisord.conf
+++ b/web/conf/supervisord.conf
@@ -1,7 +1,7 @@
 ; Sample supervisor config file.
 
 [unix_http_server]
-file=/tmp/supervisor.sock   ; (the path to the socket file)
+file=/tmp/zhufangzhi-supervisor.sock   ; (the path to the socket file)
 ;chmod=0700                 ; socket file mode (default 0700)
 ;chown=nobody:nogroup       ; socket file uid:gid owner
 ;username=user              ; (default is no username (open server))
@@ -13,11 +13,11 @@ file=/tmp/supervisor.sock   ; (the path to the socket file)
 ;password=123               ; (default is no password (open server))
 
 [supervisord]
-logfile=/tmp/supervisord.log ; (main log file;default $CWD/supervisord.log)
+logfile=/tmp/zhufangzhi-supervisord.log ; (main log file;default $CWD/supervisord.log)
 logfile_maxbytes=50MB        ; (max main logfile bytes b4 rotation;default 50MB)
 logfile_backups=10           ; (num of main logfile rotation backups;default 10)
 loglevel=info                ; (log level;default info; others: debug,warn,trace)
-pidfile=/tmp/supervisord.pid ; (supervisord pidfile;default supervisord.pid)
+pidfile=/tmp/zhufangzhi-supervisord.pid ; (supervisord pidfile;default supervisord.pid)
 nodaemon=false               ; (start in foreground if true;default false)
 minfds=1024                  ; (min. avail startup file descriptors;default 1024)
 minprocs=200                 ; (min. avail process descriptors;default 200)
@@ -37,7 +37,7 @@ minprocs=200                 ; (min. avail process descriptors;default 200)
 supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
 [supervisorctl]
-serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
+serverurl=unix:///tmp/zhufangzhi-supervisor.sock ; use a unix:// URL  for a unix socket
 ;serverurl=http://127.0.0.1:9001 ; use an http:// url to specify an inet socket
 ;username=chris              ; should be same as http_username if set
 ;password=123                ; should be same as http_password if set
@@ -50,9 +50,7 @@ serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 
 [program:zhufangzhi]
 process_name=zhufangzhi-%(process_num)s
-command=python /root/ZhuFangZhi/web/main.py
-	--port=%(process_num)s
-	--log_file_prefix=/var/log/tornado/%(program_name)s-%(process_num)s.log
+command=python /home/sunliang/ZhuFangZhi/web/main.py --port=%(process_num)s	--log_file_prefix=/home/sunliang/ZhuFangZhi/web/log/%(program_name)s-%(process_num)s.log
 numprocs=4
 numprocs_start=8000
 
