Add virtualenv conf for supervisord.conf

--- a/web/conf/supervisord.conf
+++ b/web/conf/supervisord.conf
@@ -53,6 +53,7 @@ process_name=zhufangzhi-%(process_num)s
 command=python /home/sunliang/ZhuFangZhi/web/main.py --port=%(process_num)s	--log_file_prefix=/home/sunliang/ZhuFangZhi/web/log/%(program_name)s-%(process_num)s.log
 numprocs=4
 numprocs_start=8000
+environment=PATH="/home/sunliang/zhufangzhi-env/bin"
 
 
 
